Add Bark support

--- a/config.py.sample
+++ b/config.py.sample
@@ -11,3 +11,5 @@ pushprovider = "ServerChan"
 serverchanurl = "https://sctapi.ftqq.com/<token>.send"
 gotifyurl = "url to the gotify server (append /message at the end)"
 gotifytoken = "token for the gotify app"
+barkurl = "https://api.day.app/push"
+barktoken = "<token>"
